governance-token and token-alex merged, clarinet.toml updated

--- a/Clarinet.toml
+++ b/Clarinet.toml
@@ -5,7 +5,7 @@ costs_version = 2
 
 [contracts.age000-governance-token]
 path = "contracts/extensions/age000-governance-token.clar"
-depends_on = ["executor-dao", "governance-token-trait", "sip010-ft-trait"]
+depends_on = ["executor-dao", "governance-token-trait", "trait-sip-010"]
 
 [contracts.age001-proposal-voting]
 path = "contracts/extensions/age001-proposal-voting.clar"
@@ -21,15 +21,12 @@ depends_on = ["executor-dao", "extension-trait", "age001-proposal-voting"]
 
 [contracts.agp000-bootstrap]
 path = "contracts/proposals/agp000-bootstrap.clar"
+
 depends_on = ["executor-dao", "proposal-trait", "extension-trait", "age000-governance-token", "age001-proposal-voting", "age002-emergency-proposals", "age003-emergency-execute"]
 
 [contracts.agp001-kill-emergency-execute]
 path = "contracts/proposals/agp001-kill-emergency-execute.clar"
 depends_on = ["age003-emergency-execute", "executor-dao"]
-
-[contracts.agp002-launchpad-alex]
-path = "contracts/proposals/agp002-launchpad-alex.clar"
-depends_on = ["proposal-trait"]
 
 [contracts.executor-dao]
 path = "contracts/executor-dao.clar"
@@ -54,3 +51,49 @@ depends_on = []
 [contracts.sip010-ft-trait]
 path = "contracts/traits/sip010-ft-trait.clar"
 depends_on = []
+
+[contracts.trait-ownable]
+path = "alex-v1/clarity/contracts/traits/trait-ownable.clar"
+depends_on = [ ]
+
+[contracts.trait-sip-010]
+path = "alex-v1/clarity/contracts/traits/trait-sip-010.clar"
+depends_on = [ ]
+
+[contracts.trait-semi-fungible]
+path = "alex-v1/clarity/contracts/traits/trait-semi-fungible.clar"
+depends_on = [ ]
+
+[contracts.trait-flash-loan-user]
+path = "alex-v1/clarity/contracts/traits/trait-flash-loan-user.clar"
+depends_on = [ "trait-sip-010" ]
+
+[contracts.trait-vault]
+path = "alex-v1/clarity/contracts/traits/trait-vault.clar"
+depends_on = [ "trait-sip-010", "trait-flash-loan-user" ]
+
+[contracts.alex-vault]
+path = "alex-v1/clarity/contracts/alex-vault.clar"
+depends_on = [
+  "trait-vault",
+  "trait-sip-010",
+  "trait-flash-loan-user",
+  "trait-ownable",
+  "trait-semi-fungible"
+]
+
+[contracts.token-wstx]
+path = "alex-v1/clarity/contracts/wrapped-token/token-wstx.clar"
+depends_on = [ "trait-ownable", "alex-vault", "trait-sip-010" ]
+
+[contracts.alex-launchpad]
+path = "alex-v1/clarity/contracts/pool/alex-launchpad.clar"
+depends_on = [ "trait-ownable", "trait-sip-010", "token-wstx" ]
+
+[contracts.lottery-ido-alex]
+path = "alex-v1/clarity/contracts/lottery-tokens/lottery-ido-alex.clar"
+depends_on = ["trait-ownable", "trait-sip-010"]
+
+[contracts.agp002-launchpad-alex]
+path = "contracts/proposals/agp002-launchpad-alex.clar"
+depends_on = ["proposal-trait", "alex-launchpad", "lottery-ido-alex", "age000-governance-token"]
