--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "alex-v1"]
 	path = alex-v1
 	url = https://github.com/alexgo-io/alex-v1
+[submodule "alex-dao-proposals"]
+	path = alex-dao-proposals
+	url = https://github.com/alexgo-io/alex-dao-proposals
