--- a/Clarinet.toml
+++ b/Clarinet.toml
@@ -52,25 +52,28 @@ depends_on = []
 path = "contracts/traits/sip010-ft-trait.clar"
 depends_on = []
 
-[contracts.trait-ownable]
-path = "alex-v1/clarity/contracts/traits/trait-ownable.clar"
-depends_on = [ ]
+[contracts.alex-reserve-pool]
+path = "alex-v1/clarity/contracts/pool/alex-reserve-pool.clar"
+depends_on = [
+  "trait-ownable",
+  "trait-sip-010",
+  "alex-vault",
+  "age000-governance-token",
+  "token-apower"
+]
 
-[contracts.trait-sip-010]
-path = "alex-v1/clarity/contracts/traits/trait-sip-010.clar"
-depends_on = [ ]
+[contracts.futures-pool]
+path = "alex-v1/clarity/contracts/pool/futures-pool.clar"
+depends_on = [
+  "trait-ownable",
+  "trait-semi-fungible",
+  "trait-multisig-vote",
+  "alex-reserve-pool"
+]
 
-[contracts.trait-semi-fungible]
-path = "alex-v1/clarity/contracts/traits/trait-semi-fungible.clar"
-depends_on = [ ]
-
-[contracts.trait-flash-loan-user]
-path = "alex-v1/clarity/contracts/traits/trait-flash-loan-user.clar"
-depends_on = [ "trait-sip-010" ]
-
-[contracts.trait-vault]
-path = "alex-v1/clarity/contracts/traits/trait-vault.clar"
-depends_on = [ "trait-sip-010", "trait-flash-loan-user" ]
+[contracts.staking-helper]
+path = "alex-v1/clarity/contracts/helpers/staking-helper.clar"
+depends_on = [ "alex-reserve-pool", "trait-sip-010" ]
 
 [contracts.alex-vault]
 path = "alex-v1/clarity/contracts/alex-vault.clar"
@@ -82,18 +85,399 @@ depends_on = [
   "trait-semi-fungible"
 ]
 
+[contracts.collateral-rebalancing-pool]
+path = "alex-v1/clarity/contracts/pool/collateral-rebalancing-pool.clar"
+depends_on = [
+  "trait-sip-010",
+  "trait-vault",
+  "alex-vault",
+  "weighted-equation",
+  "fixed-weight-pool",
+  "alex-reserve-pool",
+  "yield-token-pool"
+]
+
+[contracts.yield-collateral-rebalancing-pool]
+path = "alex-v1/clarity/contracts/pool/yield-collateral-rebalancing-pool.clar"
+depends_on = [
+  "trait-sip-010",
+  "trait-vault",
+  "weighted-equation",
+  "fixed-weight-pool",
+  "alex-reserve-pool",
+  "yield-token-pool"
+]
+
+[contracts.faucet]
+path = "alex-v1/clarity/contracts/faucet.clar"
+depends_on = [ "token-xbtc", "token-usda", "age000-governance-token", "token-wstx" ]
+
+[contracts.fixed-weight-pool]
+path = "alex-v1/clarity/contracts/pool/fixed-weight-pool.clar"
+depends_on = [
+  "alex-vault",
+  "trait-sip-010",
+  "trait-vault",
+  "weighted-equation",
+  "alex-reserve-pool",
+  "trait-multisig-vote",
+  "token-wstx"
+]
+
+[contracts.flash-loan-user-margin-usda-wbtc]
+path = "alex-v1/clarity/contracts/flash-loan-user-margin-usda-wbtc.clar"
+depends_on = [
+  "trait-sip-010",
+  "trait-flash-loan-user",
+  "yield-wbtc",
+  "key-wbtc-usda",
+  "collateral-rebalancing-pool",
+  "yield-token-pool",
+  "fixed-weight-pool",
+  "token-usda",
+  "token-wbtc"
+]
+
+[contracts.flash-loan-user-margin-wstx-usda]
+path = "alex-v1/clarity/contracts/flash-loan-user-margin-wstx-usda.clar"
+depends_on = [
+  "trait-sip-010",
+  "trait-flash-loan-user",
+  "token-wstx",
+  "yield-usda",
+  "key-usda-wstx",
+  "collateral-rebalancing-pool",
+  "yield-token-pool",
+  "fixed-weight-pool",
+  "token-wstx",
+  "token-usda"  
+]
+
+[contracts.fwp-wstx-usda-50-50]
+path = "alex-v1/clarity/contracts/pool-token/fwp-wstx-usda-50-50.clar"
+depends_on = [ "trait-sip-010", "trait-ownable" ]
+
+[contracts.fwp-wstx-wbtc-50-50]
+path = "alex-v1/clarity/contracts/pool-token/fwp-wstx-wbtc-50-50.clar"
+depends_on = [ "trait-sip-010", "trait-ownable" ]
+
+[contracts.fwp-wstx-alex-50-50]
+path = "alex-v1/clarity/contracts/pool-token/fwp-wstx-alex-50-50.clar"
+depends_on = [ "trait-sip-010", "trait-ownable" ]
+
+[contracts.key-usda-wbtc]
+path = "alex-v1/clarity/contracts/key-token/key-usda-wbtc.clar"
+depends_on = [ "trait-ownable", "trait-semi-fungible" ]
+
+[contracts.key-usda-wstx]
+path = "alex-v1/clarity/contracts/key-token/key-usda-wstx.clar"
+depends_on = [ "trait-ownable", "trait-semi-fungible" ]
+
+[contracts.liquidity-bootstrapping-pool]
+path = "alex-v1/clarity/contracts/pool/liquidity-bootstrapping-pool.clar"
+depends_on = [
+  "trait-sip-010",
+  "trait-vault",
+  "weighted-equation",
+  "alex-reserve-pool",
+  "fixed-weight-pool",
+  "trait-multisig-vote",
+  "alex-vault"
+]
+
+[contracts.margin-helper]
+path = "alex-v1/clarity/contracts/helpers/margin-helper.clar"
+depends_on = [
+  "trait-sip-010",
+  "trait-flash-loan-user",
+  "collateral-rebalancing-pool",
+  "fixed-weight-pool",
+  "alex-vault"
+]
+
+[contracts.math-fixed-point]
+path = "alex-v1/clarity/contracts/lib/math-fixed-point.clar"
+depends_on = [ "math-log-exp" ]
+
+[contracts.math-log-exp]
+path = "alex-v1/clarity/contracts/lib/math-log-exp.clar"
+depends_on = [ ]
+
+[contracts.multisig-crp-usda-wstx]
+path = "alex-v1/clarity/contracts/multisig/multisig-crp-usda-wstx.clar"
+depends_on = [ "yield-usda", "key-usda-wstx", "collateral-rebalancing-pool" ]
+
+[contracts.multisig-fwp-wstx-usda-50-50]
+path = "alex-v1/clarity/contracts/multisig/multisig-fwp-wstx-usda-50-50.clar"
+depends_on = [
+  "fwp-wstx-usda-50-50",
+  "fixed-weight-pool"
+]
+
+[contracts.multisig-fwp-wstx-alex-50-50]
+path = "alex-v1/clarity/contracts/multisig/multisig-fwp-wstx-alex-50-50.clar"
+depends_on = [
+  "fwp-wstx-alex-50-50",
+  "fixed-weight-pool"
+]
+
+[contracts.multisig-fwp-wstx-wbtc-50-50]
+path = "alex-v1/clarity/contracts/multisig/multisig-fwp-wstx-wbtc-50-50.clar"
+depends_on = [
+  "fwp-wstx-wbtc-50-50",
+  "fixed-weight-pool"
+]
+
+[contracts.multisig-ytp-yield-wbtc]
+path = "alex-v1/clarity/contracts/multisig/multisig-ytp-yield-wbtc.clar"
+depends_on = [ "ytp-yield-wbtc", "yield-wbtc", "yield-token-pool" ]
+
+[contracts.token-usda]
+path = "alex-v1/clarity/contracts/token/token-usda.clar"
+depends_on = [ "trait-ownable", "trait-sip-010" ]
+
+[contracts.token-xbtc]
+path = "alex-v1/clarity/contracts/token/token-xbtc.clar"
+depends_on = [ "trait-ownable", "trait-sip-010" ]
+
+[contracts.token-wbtc]
+path = "alex-v1/clarity/contracts/wrapped-token/token-wbtc.clar"
+depends_on = [ "trait-ownable", "trait-sip-010", "token-xbtc" ]
+
 [contracts.token-wstx]
 path = "alex-v1/clarity/contracts/wrapped-token/token-wstx.clar"
-depends_on = [ "trait-ownable", "alex-vault", "trait-sip-010" ]
+depends_on = [ "trait-ownable", "trait-sip-010" ]
+
+[contracts.token-apower]
+path = "alex-v1/clarity/contracts/token/token-apower.clar"
+depends_on = [ "trait-ownable", "trait-sip-010" ]
+
+[contracts.trait-flash-loan-user]
+path = "alex-v1/clarity/contracts/traits/trait-flash-loan-user.clar"
+depends_on = [ "trait-sip-010" ]
+
+[contracts.trait-multisig-vote]
+path = "alex-v1/clarity/contracts/traits/trait-multisig-vote.clar"
+depends_on = [ "trait-sip-010" ]
+
+[contracts.trait-oracle]
+path = "alex-v1/clarity/contracts/traits/trait-oracle.clar"
+depends_on = [ ]
+
+[contracts.trait-ownable]
+path = "alex-v1/clarity/contracts/traits/trait-ownable.clar"
+depends_on = [ ]
+
+[contracts.trait-semi-fungible]
+path = "alex-v1/clarity/contracts/traits/trait-semi-fungible.clar"
+depends_on = [ ]
+
+[contracts.trait-sip-010]
+path = "alex-v1/clarity/contracts/traits/trait-sip-010.clar"
+depends_on = [ ]
+
+[contracts.trait-vault]
+path = "alex-v1/clarity/contracts/traits/trait-vault.clar"
+depends_on = [ "trait-sip-010", "trait-flash-loan-user" ]
+
+[contracts.weighted-equation]
+path = "alex-v1/clarity/contracts/equations/weighted-equation.clar"
+depends_on = [ ]
+
+[contracts.yield-token-equation]
+path = "alex-v1/clarity/contracts/equations/yield-token-equation.clar"
+depends_on = [ ]
+
+[contracts.yield-token-pool]
+path = "alex-v1/clarity/contracts/pool/yield-token-pool.clar"
+depends_on = [
+  "alex-vault",
+  "trait-sip-010",
+  "trait-vault",
+  "trait-flash-loan-user",
+  "yield-token-equation",
+  "trait-semi-fungible",
+  "fixed-weight-pool",
+  "alex-reserve-pool",
+  "trait-multisig-vote"
+]
+
+[contracts.lbp-alex-usda-90-10]
+path = "alex-v1/clarity/contracts/pool-token/lbp-alex-usda-90-10.clar"
+depends_on = [ "trait-sip-010", "trait-ownable" ]
+
+[contracts.multisig-lbp-alex-usda-90-10]
+path = "alex-v1/clarity/contracts/multisig/multisig-lbp-alex-usda-90-10.clar"
+depends_on = [ "lbp-alex-usda-90-10" ]
+
+[contracts.lbp-alex-wstx-80-20]
+path = "alex-v1/clarity/contracts/pool-token/lbp-alex-wstx-80-20.clar"
+depends_on = [ "trait-sip-010", "trait-ownable" ]
+
+[contracts.multisig-lbp-alex-wstx-80-20]
+path = "alex-v1/clarity/contracts/multisig/multisig-lbp-alex-wstx-80-20.clar"
+depends_on = [ "lbp-alex-wstx-80-20" ]
+
+[contracts.multisig-crp-usda-wbtc]
+path = "alex-v1/clarity/contracts/multisig/multisig-crp-usda-wbtc.clar"
+depends_on = [
+  "yield-usda",
+  "key-usda-wbtc",
+  "collateral-rebalancing-pool",
+  "trait-semi-fungible",
+  "trait-multisig-vote"
+]
+
+[contracts.multisig-crp-wbtc-wbtc]
+path = "alex-v1/clarity/contracts/multisig/multisig-crp-wbtc-wbtc.clar"
+depends_on = [
+  "yield-wbtc",
+  "key-wbtc-wbtc",
+  "collateral-rebalancing-pool",
+  "trait-semi-fungible",
+  "trait-multisig-vote"
+]
+
+[contracts.multisig-crp-wbtc-usda]
+path = "alex-v1/clarity/contracts/multisig/multisig-crp-wbtc-usda.clar"
+depends_on = [
+  "yield-wbtc",
+  "key-wbtc-usda",
+  "collateral-rebalancing-pool",
+  "trait-multisig-vote"
+]
+
+[contracts.multisig-ytp-yield-usda]
+path = "alex-v1/clarity/contracts/multisig/multisig-ytp-yield-usda.clar"
+depends_on = [ "ytp-yield-usda", "yield-usda", "yield-token-pool" ]
+
+[contracts.key-wbtc-usda]
+path = "alex-v1/clarity/contracts/key-token/key-wbtc-usda.clar"
+depends_on = [ "trait-ownable", "trait-semi-fungible" ]
+
+[contracts.key-wbtc-wbtc]
+path = "alex-v1/clarity/contracts/key-token/key-wbtc-wbtc.clar"
+depends_on = [ "trait-ownable", "trait-semi-fungible" ]
+
+[contracts.yield-usda]
+path = "alex-v1/clarity/contracts/yield-token/yield-usda.clar"
+depends_on = [ "trait-ownable", "trait-semi-fungible" ]
+
+[contracts.yield-wbtc]
+path = "alex-v1/clarity/contracts/yield-token/yield-wbtc.clar"
+depends_on = [ "trait-ownable", "trait-semi-fungible" ]
+
+[contracts.ytp-yield-usda]
+path = "alex-v1/clarity/contracts/pool-token/ytp-yield-usda.clar"
+depends_on = [ "trait-ownable", "trait-semi-fungible" ]
+
+[contracts.ytp-yield-wbtc]
+path = "alex-v1/clarity/contracts/pool-token/ytp-yield-wbtc.clar"
+depends_on = [ "trait-ownable", "trait-semi-fungible" ]
 
 [contracts.alex-launchpad]
 path = "alex-v1/clarity/contracts/pool/alex-launchpad.clar"
-depends_on = [ "trait-ownable", "trait-sip-010", "token-wstx" ]
+depends_on = [ "trait-ownable", "trait-sip-010", "token-wstx", "executor-dao" ]
+
+[contracts.staked-alex]
+path = "alex-v1/clarity/contracts/staked-token/staked-alex.clar"
+depends_on = [ "trait-ownable", "trait-semi-fungible" ]
+
+[contracts.flash-loan-user-margin-wbtc-usda]
+path = "alex-v1/clarity/contracts/flash-loan-user-margin-wbtc-usda.clar"
+depends_on = [
+  "trait-sip-010",
+  "trait-flash-loan-user",
+  "token-wbtc",
+  "yield-usda",
+  "key-usda-wbtc",
+  "collateral-rebalancing-pool",
+  "yield-token-pool",
+  "fixed-weight-pool",
+  "multisig-ytp-yield-wbtc",
+  "multisig-ytp-yield-usda"
+]
+
+[contracts.lottery-t-alex]
+path = "alex-v1/clarity/contracts/lottery-tokens/lottery-t-alex.clar"
+depends_on = [ "trait-ownable", "trait-sip-010" ]
+
+[contracts.token-unauthorised]
+path = "alex-v1/clarity/contracts/tests/token-unauthorised.clar"
+depends_on = [ "trait-ownable", "trait-sip-010" ]
+
+[contracts.flash-loan-user-unauthorised]
+path = "alex-v1/clarity/contracts/tests/flash-loan-user-unauthorised.clar"
+depends_on = [ "trait-flash-loan-user" ]
+
+[contracts.math-fixed-point-16]
+path = "alex-v1/clarity/contracts/lib/math-fixed-point-16.clar"
+depends_on = [ "math-log-exp-16" ]
+
+[contracts.math-log-exp-16]
+path = "alex-v1/clarity/contracts/lib/math-log-exp-16.clar"
+depends_on = [ ]
+
+[contracts.faucet-helper]
+path = "alex-v1/clarity/contracts/helpers/faucet-helper.clar"
+depends_on = [ "faucet" ]
+
+[contracts.exchange]
+path = "alex-v1/clarity/contracts/exchange.clar"
+depends_on = [ "trait-ownable", "age000-governance-token" ]
 
 [contracts.lottery-ido-alex]
 path = "alex-v1/clarity/contracts/lottery-tokens/lottery-ido-alex.clar"
 depends_on = ["trait-ownable", "trait-sip-010"]
 
+
+[contracts.flash-loan-user-margin-wbtc-wstx]
+path = "alex-v1/clarity/contracts/flash-loan-user-margin-wbtc-wstx.clar"
+depends_on = [
+  "trait-sip-010",
+  "trait-flash-loan-user",
+  "token-wbtc",
+  "yield-wstx",
+  "key-wstx-wbtc",
+  "collateral-rebalancing-pool",
+  "yield-token-pool",
+  "fixed-weight-pool",
+  "multisig-ytp-yield-wbtc",
+  "multisig-ytp-yield-wstx"
+]
+
+[contracts.yield-wstx]
+path = "alex-v1/clarity/contracts/yield-token/yield-wstx.clar"
+depends_on = [ "trait-ownable", "trait-semi-fungible" ]
+
+[contracts.multisig-ytp-yield-wstx]
+path = "alex-v1/clarity/contracts/multisig/multisig-ytp-yield-wstx.clar"
+depends_on = [ "ytp-yield-wstx", "yield-wstx", "yield-token-pool" ]
+
+[contracts.ytp-yield-wstx]
+path = "alex-v1/clarity/contracts/pool-token/ytp-yield-wstx.clar"
+depends_on = [ "trait-ownable", "trait-semi-fungible" ]
+
+[contracts.multisig-crp-wstx-wbtc]
+path = "alex-v1/clarity/contracts/multisig/multisig-crp-wstx-wbtc.clar"
+depends_on = [ "yield-wstx", "key-wstx-wbtc", "collateral-rebalancing-pool" ]
+
+[contracts.key-wstx-wbtc]
+path = "alex-v1/clarity/contracts/key-token/key-wstx-wbtc.clar"
+depends_on = [ "trait-ownable", "trait-semi-fungible" ]
+
+[contracts.token-t-alex]
+path = "alex-v1/clarity/contracts/token/token-t-alex.clar"
+depends_on = [ "trait-ownable", "trait-sip-010" ]
+
 [contracts.agp003-launchpad-alex]
 path = "contracts/proposals/agp003-launchpad-alex.clar"
 depends_on = ["proposal-trait", "alex-launchpad", "lottery-ido-alex", "age000-governance-token"]
+
+[contracts.agp005-wstx-alex-50-50]
+path = "alex-dao-proposals/agp005-wstx-alex-50-50.clar"
+depends_on = ["age000-governance-token", "token-wstx", "fixed-weight-pool", "fwp-wstx-alex-50-50", "multisig-fwp-wstx-alex-50-50" ]
+
+[contracts.agp006-flash-loan-fee]
+path = "alex-dao-proposals/agp006-flash-loan-fee.clar"
+depends_on = ["alex-vault"]
