agp007 test added

--- a/Clarinet.toml
+++ b/Clarinet.toml
@@ -481,3 +481,7 @@ depends_on = ["age000-governance-token", "token-wstx", "fixed-weight-pool", "fwp
 [contracts.agp006-wstx-wbtc-50-50]
 path = "alex-dao-proposals/agp006-wstx-wbtc-50-50.clar"
 depends_on = ["token-wbtc", "token-xbtc", "token-wstx", "fixed-weight-pool", "fwp-wstx-wbtc-50-50", "multisig-fwp-wstx-wbtc-50-50", "alex-reserve-pool" ]
+
+[contracts.agp007-wstx-alex-50-50]
+path = "alex-dao-proposals/agp007-wstx-alex-50-50.clar"
+depends_on = ["age000-governance-token", "token-wstx", "fixed-weight-pool", "fwp-wstx-alex-50-50", "multisig-fwp-wstx-alex-50-50", "alex-vault", "alex-reserve-pool" ]
