--- a/Clarinet.toml
+++ b/Clarinet.toml
@@ -485,3 +485,7 @@ depends_on = ["token-wbtc", "token-xbtc", "token-wstx", "fixed-weight-pool", "fw
 [contracts.agp007-wstx-alex-50-50]
 path = "alex-dao-proposals/agp007-wstx-alex-50-50.clar"
 depends_on = ["age000-governance-token", "token-wstx", "fixed-weight-pool", "fwp-wstx-alex-50-50", "multisig-fwp-wstx-alex-50-50", "alex-vault", "alex-reserve-pool" ]
+
+[contracts.agp008]
+path = "alex-dao-proposals/agp008.clar"
+depends_on = ["age000-governance-token"]
