--- a/Clarinet.toml
+++ b/Clarinet.toml
@@ -497,3 +497,74 @@ depends_on = ["weighted-equation"]
 [contracts.agp010]
 path = "alex-dao-proposals/agp010.clar"
 depends_on = ["weighted-equation"]
+
+[contracts.agp011]
+path = "alex-dao-proposals/agp011.clar"
+depends_on = ["weighted-equation", "fixed-weight-pool", "token-wstx", "token-wbtc", "fwp-wstx-wbtc-50-50"]
+
+[contracts.weighted-equation-v1-01]
+path = "alex-v1/alex-v1.01/equations/weighted-equation-v1-01.clar"
+depends_on = [ ]
+
+[contracts.fixed-weight-pool-v1-01]
+path = "alex-v1/alex-v1.01/pool/fixed-weight-pool-v1-01.clar"
+depends_on = [
+  "alex-vault",
+  "trait-sip-010",
+  "trait-vault",
+  "weighted-equation-v1-01",
+  "alex-reserve-pool",
+  "token-wstx"
+]
+
+[contracts.fwp-wstx-alex-50-50-v1-01]
+path = "alex-v1/alex-v1.01/pool-token/fwp-wstx-alex-50-50-v1-01.clar"
+depends_on = [ "trait-sip-010", "trait-ownable" ]
+
+[contracts.multisig-fwp-wstx-alex-50-50-v1-01]
+path = "alex-v1/alex-v1.01/multisig/multisig-fwp-wstx-alex-50-50-v1-01.clar"
+depends_on = [
+  "fwp-wstx-alex-50-50-v1-01",
+  "fixed-weight-pool-v1-01"
+]
+
+[contracts.fwp-wstx-wbtc-50-50-v1-01]
+path = "alex-v1/alex-v1.01/pool-token/fwp-wstx-wbtc-50-50-v1-01.clar"
+depends_on = [ "trait-sip-010", "trait-ownable" ]
+
+[contracts.multisig-fwp-wstx-wbtc-50-50-v1-01]
+path = "alex-v1/alex-v1.01/multisig/multisig-fwp-wstx-wbtc-50-50-v1-01.clar"
+depends_on = [
+  "fwp-wstx-wbtc-50-50-v1-01",
+  "fixed-weight-pool-v1-01"
+]
+
+[contracts.fwp-wstx-usda-50-50-v1-01]
+path = "alex-v1/alex-v1.01/pool-token/fwp-wstx-usda-50-50-v1-01.clar"
+depends_on = [ "trait-sip-010", "trait-ownable" ]
+
+[contracts.multisig-fwp-wstx-usda-50-50-v1-01]
+path = "alex-v1/alex-v1.01/multisig/multisig-fwp-wstx-usda-50-50-v1-01.clar"
+depends_on = [
+  "fwp-wstx-usda-50-50-v1-01",
+  "fixed-weight-pool-v1-01"
+]
+
+[contracts.agp012]
+path = "alex-dao-proposals/agp012.clar"
+depends_on = [
+  "weighted-equation-v1-01", 
+  "fixed-weight-pool-v1-01", 
+  "token-wstx", 
+  "token-wbtc",
+  "age000-governance-token",  
+  "fwp-wstx-alex-50-50",
+  "fwp-wstx-alex-50-50-v1-01",
+  "multisig-fwp-wstx-alex-50-50-v1-01",
+  "fwp-wstx-wbtc-50-50",
+  "fwp-wstx-wbtc-50-50-v1-01",
+  "multisig-fwp-wstx-wbtc-50-50-v1-01",
+  "alex-vault",
+  "alex-reserve-pool"
+]
+
