--- a/Clarinet.toml
+++ b/Clarinet.toml
@@ -1,6 +1,7 @@
 [project]
 name = "executor-dao"
 requirements = []
+[repl]
 costs_version = 2
 
 [contracts.age000-governance-token]
@@ -186,31 +187,31 @@ path = "contracts/proposals/agp003-launchpad-alex.clar"
 depends_on = ["proposal-trait", "alex-launchpad", "lottery-ido-alex", "age000-governance-token"]
 
 [contracts.agp005-wstx-alex-50-50]
-path = "alex-dao-proposals/agp005-wstx-alex-50-50.clar"
+path = "alex-dao-proposals/contracts/agp005-wstx-alex-50-50.clar"
 depends_on = ["age000-governance-token", "token-wstx", "fixed-weight-pool", "fwp-wstx-alex-50-50", "multisig-fwp-wstx-alex-50-50", "alex-vault", "alex-reserve-pool" ]
 
 [contracts.agp006-wstx-wbtc-50-50]
-path = "alex-dao-proposals/agp006-wstx-wbtc-50-50.clar"
+path = "alex-dao-proposals/contracts/agp006-wstx-wbtc-50-50.clar"
 depends_on = ["token-wbtc", "token-xbtc", "token-wstx", "fixed-weight-pool", "fwp-wstx-wbtc-50-50", "multisig-fwp-wstx-wbtc-50-50", "alex-reserve-pool" ]
 
 [contracts.agp007-wstx-alex-50-50]
-path = "alex-dao-proposals/agp007-wstx-alex-50-50.clar"
+path = "alex-dao-proposals/contracts/agp007-wstx-alex-50-50.clar"
 depends_on = ["age000-governance-token", "token-wstx", "fixed-weight-pool", "fwp-wstx-alex-50-50", "multisig-fwp-wstx-alex-50-50", "alex-vault", "alex-reserve-pool" ]
 
 [contracts.agp008]
-path = "alex-dao-proposals/agp008.clar"
+path = "alex-dao-proposals/contracts/agp008.clar"
 depends_on = ["age000-governance-token"]
 
 [contracts.agp009]
-path = "alex-dao-proposals/agp009.clar"
+path = "alex-dao-proposals/contracts/agp009.clar"
 depends_on = ["weighted-equation"]
 
 [contracts.agp010]
-path = "alex-dao-proposals/agp010.clar"
+path = "alex-dao-proposals/contracts/agp010.clar"
 depends_on = ["weighted-equation"]
 
 [contracts.agp011]
-path = "alex-dao-proposals/agp011.clar"
+path = "alex-dao-proposals/contracts/agp011.clar"
 depends_on = ["weighted-equation", "fixed-weight-pool", "token-wstx", "token-wbtc", "fwp-wstx-wbtc-50-50"]
 
 
@@ -238,7 +239,7 @@ depends_on = [
 ]
 
 [contracts.agp012]
-path = "alex-dao-proposals/agp012.clar"
+path = "alex-dao-proposals/contracts/agp012.clar"
 depends_on = [
   "weighted-equation", 
   "fixed-weight-pool",  
@@ -258,7 +259,7 @@ depends_on = [
 ]
 
 [contracts.agp014]
-path = "alex-dao-proposals/agp014.clar"
+path = "alex-dao-proposals/contracts/agp014.clar"
 depends_on = [
   "alex-reserve-pool",
   "age000-governance-token",  
@@ -267,7 +268,7 @@ depends_on = [
 ]
 
 [contracts.agp015]
-path = "alex-dao-proposals/agp015.clar"
+path = "alex-dao-proposals/contracts/agp015.clar"
 depends_on = [
   "alex-reserve-pool",
   "age000-governance-token",  
@@ -276,7 +277,7 @@ depends_on = [
 ]
 
 [contracts.agp017]
-path = "alex-dao-proposals/agp017.clar"
+path = "alex-dao-proposals/contracts/agp017.clar"
 depends_on = [
   "fixed-weight-pool",
   "fixed-weight-pool-v1-01", 
@@ -292,7 +293,7 @@ depends_on = [
 ]
 
 [contracts.agp018]
-path = "alex-dao-proposals/agp018.clar"
+path = "alex-dao-proposals/contracts/agp018.clar"
 depends_on = [
   "alex-reserve-pool",
   "age000-governance-token",  
@@ -300,6 +301,17 @@ depends_on = [
   "fwp-wstx-wbtc-50-50-v1-01", 
   "trait-sip-010", 
   "trait-multisig-vote"
+]
+
+[contracts.agp025]
+path = "alex-dao-proposals/contracts/agp025.clar"
+depends_on = [
+  "fixed-weight-pool-v1-01", 
+  "age000-governance-token",  
+  "fwp-wstx-alex-50-50-v1-01",
+  "fwp-wstx-wbtc-50-50-v1-01",
+  "alex-vault",
+  "alex-reserve-pool"
 ]
 
 
