--- a/Clarinet.toml
+++ b/Clarinet.toml
@@ -9,10 +9,6 @@ costs_version = 2
 path = "contracts/extensions/age000-governance-token.clar"
 depends_on = ["executor-dao", "governance-token-trait", "trait-sip-010"]
 
-[contracts.trait-sip-010]
-path = "contracts_modules/alex_v1/traits/trait-sip-010.clar"
-depends_on = [ ]
-
 [contracts.age001-proposal-voting]
 path = "contracts/extensions/age001-proposal-voting.clar"
 depends_on = ["executor-dao", "proposal-trait", "extension-trait", "governance-token-trait", "age000-governance-token"]
@@ -57,268 +53,50 @@ depends_on = []
 path = "contracts/traits/sip010-ft-trait.clar"
 depends_on = []
 
-[contracts.alex-reserve-pool]
-path = "contracts_modules/alex_v1/pool/alex-reserve-pool.clar"
-depends_on = [
-  "trait-ownable",
-  "trait-sip-010",
-  "alex-vault",
-  "age000-governance-token",
-  "token-apower"
-]
+[contracts.alex-launchpad-v1-1]
+path = "contracts_modules/alex_v1/pool/alex-launchpad-v1-1.clar"
+depends_on = ["trait-sip-010", "trait-ido-ft", "token-apower"]
 
-[contracts.alex-vault]
-path = "contracts_modules/alex_v1/alex-vault.clar"
-depends_on = [
-  "trait-vault",
-  "trait-sip-010",
-  "trait-flash-loan-user",
-  "trait-ownable",
-  "trait-semi-fungible"
-]
+[contracts.token-wban]
+path = "contracts_modules/alex_v1/wrapped-token/token-wban.clar"
+depends_on = [ "trait-ownable", "trait-sip-010", "token-banana", "trait-ido-ft"]
 
+[contracts.token-banana]
+path = "contracts_modules/alex_v1/token/token-banana.clar"
+depends_on = [ "trait-ownable", "trait-sip-010" ]
 
-[contracts.fwp-wstx-wbtc-50-50]
-path = "contracts_modules/alex_v1/pool-token/fwp-wstx-wbtc-50-50.clar"
-depends_on = [ "trait-sip-010", "trait-ownable" ]
+[contracts.trait-ownable]
+path = "contracts_modules/alex_v1/traits/trait-ownable.clar"
+depends_on = []
 
-[contracts.fwp-wstx-alex-50-50]
-path = "contracts_modules/alex_v1/pool-token/fwp-wstx-alex-50-50.clar"
-depends_on = [ "trait-sip-010", "trait-ownable" ]
+[contracts.trait-sip-010]
+path = "contracts_modules/alex_v1/traits/trait-sip-010.clar"
+depends_on = []
 
-
-[contracts.math-fixed-point]
-path = "contracts_modules/alex_v1/lib/math-fixed-point.clar"
-depends_on = [ "math-log-exp" ]
-
-[contracts.math-log-exp]
-path = "contracts_modules/alex_v1/lib/math-log-exp.clar"
+[contracts.trait-ido-ft]
+path = "contracts_modules/alex_v1/traits/trait-ido-ft.clar"
 depends_on = [ ]
-
-[contracts.multisig-fwp-wstx-alex-50-50]
-path = "contracts_modules/alex_v1/multisig/multisig-fwp-wstx-alex-50-50.clar"
-depends_on = [
-  "fwp-wstx-alex-50-50",
-  "fixed-weight-pool-v1-01", "trait-sip-010", "trait-multisig-vote"
-]
-
-[contracts.multisig-fwp-wstx-wbtc-50-50]
-path = "contracts_modules/alex_v1/multisig/multisig-fwp-wstx-wbtc-50-50.clar"
-depends_on = [
-  "fwp-wstx-wbtc-50-50",
-  "fixed-weight-pool-v1-01", "trait-sip-010", "trait-multisig-vote"
-]
-
-[contracts.token-xbtc]
-path = "contracts_modules/alex_v1/token/token-xbtc.clar"
-depends_on = [ "trait-ownable", "trait-sip-010" ]
-
-[contracts.token-wbtc]
-path = "contracts_modules/alex_v1/wrapped-token/token-wbtc.clar"
-depends_on = [ "trait-ownable", "trait-sip-010", "token-xbtc" ]
-
-[contracts.token-wstx]
-path = "contracts_modules/alex_v1/wrapped-token/token-wstx.clar"
-depends_on = [ "trait-ownable", "trait-sip-010" ]
 
 [contracts.token-apower]
 path = "contracts_modules/alex_v1/token/token-apower.clar"
 depends_on = [ "trait-ownable", "trait-sip-010" ]
 
-[contracts.trait-flash-loan-user]
-path = "contracts_modules/alex_v1/traits/trait-flash-loan-user.clar"
-depends_on = [ "trait-sip-010" ]
+[contracts.token-wstx]
+path = "contracts_modules/alex_v1/wrapped-token/token-wstx.clar"
+depends_on = [ "trait-ownable", "trait-sip-010" ]
 
-[contracts.trait-multisig-vote]
-path = "contracts_modules/alex_v1/traits/trait-multisig-vote.clar"
-depends_on = [ "trait-sip-010" ]
+[contracts.agp029]
+path = "alex-dao-proposals/contracts/agp029.clar"
+depends_on = [ "alex-launchpad-v1-1", "token-wban", "age000-governance-token" ]
 
-[contracts.trait-ownable]
-path = "contracts_modules/alex_v1/traits/trait-ownable.clar"
-depends_on = [ ]
+[contracts.agp030]
+path = "alex-dao-proposals/contracts/agp030.clar"
+depends_on = [ "alex-launchpad-v1-1", "token-wban", "age000-governance-token" ]
 
-[contracts.trait-semi-fungible]
-path = "contracts_modules/alex_v1/traits/trait-semi-fungible.clar"
-depends_on = [ ]
+[contracts.agp031]
+path = "alex-dao-proposals/contracts/agp031.clar"
+depends_on = [ "alex-launchpad-v1-1", "token-wban", "age000-governance-token", "token-apower" ]
 
-[contracts.trait-vault]
-path = "contracts_modules/alex_v1/traits/trait-vault.clar"
-depends_on = [ "trait-sip-010", "trait-flash-loan-user" ]
-
-[contracts.weighted-equation]
-path = "contracts_modules/alex_v1/equations/weighted-equation-v1-01.clar"
-depends_on = [ ]
-
-[contracts.fixed-weight-pool]
-path = "contracts_modules/alex_v1/pool/fixed-weight-pool-v1-01.clar"
-depends_on = [
-  "alex-vault",
-  "trait-sip-010",
-  "trait-vault",
-  "weighted-equation-v1-01",
-  "alex-reserve-pool",
-  "token-wstx"
-]
-
-[contracts.weighted-equation-v1-01]
-path = "contracts_modules/alex_v1/equations/weighted-equation-v1-01.clar"
-depends_on = [ ]
-
-[contracts.fixed-weight-pool-v1-01]
-path = "contracts_modules/alex_v1/pool/fixed-weight-pool-v1-01.clar"
-depends_on = [
-  "alex-vault",
-  "trait-sip-010",
-  "trait-vault",
-  "weighted-equation-v1-01",
-  "alex-reserve-pool",
-  "token-wstx"
-]
-
-[contracts.lottery-ido-alex]
-path = "contracts_modules/alex_v1/lottery-tokens/lottery-ido-alex.clar"
-depends_on = ["trait-ownable", "trait-sip-010"]
-
-[contracts.alex-launchpad]
-path = "contracts_modules/alex_v1/pool/alex-launchpad.clar"
-depends_on = [ "trait-ownable", "trait-sip-010", "token-wstx", "executor-dao" ]
-
-[contracts.agp003-launchpad-alex]
-path = "contracts/proposals/agp003-launchpad-alex.clar"
-depends_on = ["proposal-trait", "alex-launchpad", "lottery-ido-alex", "age000-governance-token"]
-
-[contracts.agp005-wstx-alex-50-50]
-path = "contracts_modules/alex_dao_proposals/agp005-wstx-alex-50-50.clar"
-depends_on = ["age000-governance-token", "token-wstx", "fixed-weight-pool", "fwp-wstx-alex-50-50", "multisig-fwp-wstx-alex-50-50", "alex-vault", "alex-reserve-pool" ]
-
-[contracts.agp006-wstx-wbtc-50-50]
-path = "contracts_modules/alex_dao_proposals/agp006-wstx-wbtc-50-50.clar"
-depends_on = ["token-wbtc", "token-xbtc", "token-wstx", "fixed-weight-pool", "fwp-wstx-wbtc-50-50", "multisig-fwp-wstx-wbtc-50-50", "alex-reserve-pool" ]
-
-[contracts.agp007-wstx-alex-50-50]
-path = "contracts_modules/alex_dao_proposals/agp007-wstx-alex-50-50.clar"
-depends_on = ["age000-governance-token", "token-wstx", "fixed-weight-pool", "fwp-wstx-alex-50-50", "multisig-fwp-wstx-alex-50-50", "alex-vault", "alex-reserve-pool" ]
-
-[contracts.agp008]
-path = "contracts_modules/alex_dao_proposals/agp008.clar"
-depends_on = ["age000-governance-token"]
-
-[contracts.agp009]
-path = "contracts_modules/alex_dao_proposals/agp009.clar"
-depends_on = ["weighted-equation"]
-
-[contracts.agp010]
-path = "contracts_modules/alex_dao_proposals/agp010.clar"
-depends_on = ["weighted-equation"]
-
-[contracts.agp011]
-path = "contracts_modules/alex_dao_proposals/agp011.clar"
-depends_on = ["weighted-equation", "fixed-weight-pool", "token-wstx", "token-wbtc", "fwp-wstx-wbtc-50-50"]
-
-
-
-[contracts.fwp-wstx-alex-50-50-v1-01]
-path = "contracts_modules/alex_v1/pool-token/fwp-wstx-alex-50-50-v1-01.clar"
-depends_on = [ "trait-sip-010", "trait-ownable" ]
-
-[contracts.multisig-fwp-wstx-alex-50-50-v1-01]
-path = "contracts_modules/alex_v1/multisig/multisig-fwp-wstx-alex-50-50-v1-01.clar"
-depends_on = [
-  "fwp-wstx-alex-50-50-v1-01",
-  "fixed-weight-pool-v1-01", "trait-sip-010", "trait-multisig-vote"
-]
-
-[contracts.fwp-wstx-wbtc-50-50-v1-01]
-path = "contracts_modules/alex_v1/pool-token/fwp-wstx-wbtc-50-50-v1-01.clar"
-depends_on = [ "trait-sip-010", "trait-ownable" ]
-
-[contracts.multisig-fwp-wstx-wbtc-50-50-v1-01]
-path = "contracts_modules/alex_v1/multisig/multisig-fwp-wstx-wbtc-50-50-v1-01.clar"
-depends_on = [
-  "fwp-wstx-wbtc-50-50-v1-01",
-  "fixed-weight-pool-v1-01", "trait-sip-010", "trait-multisig-vote"
-]
-
-[contracts.agp012]
-path = "contracts_modules/alex_dao_proposals/agp012.clar"
-depends_on = [
-  "weighted-equation", 
-  "fixed-weight-pool",  
-  "weighted-equation-v1-01", 
-  "fixed-weight-pool-v1-01", 
-  "token-wstx", 
-  "token-wbtc",
-  "age000-governance-token",  
-  "fwp-wstx-alex-50-50",
-  "fwp-wstx-alex-50-50-v1-01",
-  "multisig-fwp-wstx-alex-50-50-v1-01",
-  "fwp-wstx-wbtc-50-50",
-  "fwp-wstx-wbtc-50-50-v1-01",
-  "multisig-fwp-wstx-wbtc-50-50-v1-01",
-  "alex-vault",
-  "alex-reserve-pool"
-]
-
-[contracts.agp014]
-path = "contracts_modules/alex_dao_proposals/agp014.clar"
-depends_on = [
-  "alex-reserve-pool",
-  "age000-governance-token",  
-  "fwp-wstx-alex-50-50-v1-01",
-  "fwp-wstx-wbtc-50-50-v1-01",
-]
-
-[contracts.agp015]
-path = "contracts_modules/alex_dao_proposals/agp015.clar"
-depends_on = [
-  "alex-reserve-pool",
-  "age000-governance-token",  
-  "fwp-wstx-alex-50-50-v1-01",
-  "fwp-wstx-wbtc-50-50-v1-01",
-]
-
-[contracts.agp017]
-path = "contracts_modules/alex_dao_proposals/agp017.clar"
-depends_on = [
-  "fixed-weight-pool",
-  "fixed-weight-pool-v1-01", 
-  "token-wstx", 
-  "token-wbtc",
-  "age000-governance-token",  
-  "fwp-wstx-alex-50-50",
-  "fwp-wstx-alex-50-50-v1-01",
-  "fwp-wstx-wbtc-50-50",
-  "fwp-wstx-wbtc-50-50-v1-01",
-  "alex-vault",
-  "alex-reserve-pool"
-]
-
-[contracts.agp018]
-path = "contracts_modules/alex_dao_proposals/agp018.clar"
-depends_on = [
-  "alex-reserve-pool",
-  "age000-governance-token",  
-  "fwp-wstx-alex-50-50-v1-01",
-  "fwp-wstx-wbtc-50-50-v1-01", 
-  "trait-sip-010"
-]
-
-[contracts.agp019]
-path = "contracts_modules/alex_dao_proposals/agp019.clar"
-depends_on = [
-  "token-apower"
-]
-
-[contracts.agp025]
-path = "alex-dao-proposals/contracts/agp025.clar"
-depends_on = [
-  "fixed-weight-pool-v1-01", 
-  "age000-governance-token",  
-  "fwp-wstx-alex-50-50-v1-01",
-  "fwp-wstx-wbtc-50-50-v1-01",
-  "alex-vault",
-  "alex-reserve-pool"
-]
 
 
 
